syntax = "proto3";

package rest_gateway_test.api;

import "google/api/annotations.proto";
import "scalapb/scalapb.proto";
import "common.proto";

option java_multiple_files = false;
option java_package = "rest_gateway_test.api.java_api";
option java_outer_classname = "TestServiceAProto";

option (scalapb.options) = {
  single_file: true
  lenses: true
  retain_source_code_info: true
  preserve_unknown_fields: false
  flat_package: true
  package_name: "rest_gateway_test.api.scala_api"
};

// Test service A
service TestServiceA {
  rpc GetRequest (rest_gateway_test.api.model.TestRequestA) returns (rest_gateway_test.api.model.TestResponseA) {
    option (google.api.http) = {
      get: "/restgateway/test/testservicea"
    };
  }

  rpc GetRequestWithParam (rest_gateway_test.api.model.TestRequestA) returns (rest_gateway_test.api.model.TestResponseA) {
    option (google.api.http) = {
      get: "/restgateway/test/testservicea/{request_id}"
    };
  }

  rpc Process (rest_gateway_test.api.model.TestRequestA) returns (rest_gateway_test.api.model.TestResponseA) {
    option (google.api.http) = {
      post: "/restgateway/test/testservicea"
      body: "*"
    };
  }

  rpc GetRequestWithoutRest(rest_gateway_test.api.model.TestRequestA) returns (rest_gateway_test.api.model.TestResponseA);

  rpc GetMessageV1 (rest_gateway_test.api.model.GetMessageRequest) returns (rest_gateway_test.api.model.GetMessageResponse) {
    option (google.api.http) = {
      get: "/v1/test/messages/{message_id}"
    };
  }

  rpc GetMessageV2 (rest_gateway_test.api.model.GetMessageRequest) returns (rest_gateway_test.api.model.GetMessageResponse) {
    option (google.api.http) = {
      get: "/v1/test/users/{user_id}"
      additional_bindings {
        get: "/v1/test/users/{user_id}/messages/{message_id}"
      }
    };
  }

  rpc GetMessageV3 (rest_gateway_test.api.model.GetMessageRequestV2) returns (rest_gateway_test.api.model.GetMessageResponse) {
    option (google.api.http) = {
      get: "/v1/test/messages/{message_id}/users/{user_id}"
      additional_bindings {
        get: "/v1/test/messages/{message_id}/users/{user_id}/sub/{sub.sub_field1}"
      }
    };
  }

  rpc PostMessage (rest_gateway_test.api.model.GetMessageRequestV2) returns (rest_gateway_test.api.model.GetMessageResponse) {
    option (google.api.http) = {
      post: "/v1/test/users/{user_id}/messages/{message_id}"
      body: "sub"
    };
  };

  rpc PutMessage (rest_gateway_test.api.model.GetMessageRequestV2) returns (rest_gateway_test.api.model.GetMessageResponse) {
    option (google.api.http) = {
      put: "/v1/test/users/{user_id}/messages/{message_id}"
      body: "sub"
    };
  };

  rpc GetMessageV4 (rest_gateway_test.api.model.GetMessageRequestV3) returns (rest_gateway_test.api.model.GetMessageResponse) {
    option (google.api.http) = {
      get: "/v1/test/messages"
    };
  }

  rpc GetMessageV5 (rest_gateway_test.api.model.GetMessageRequestV4) returns (rest_gateway_test.api.model.GetMessageResponse) {
    option (google.api.http) = {
      get: "/v1/test/array"
    };
  }

  rpc ProcessMessageV5 (rest_gateway_test.api.model.GetMessageRequestV5) returns (rest_gateway_test.api.model.GetMessageResponseV5) {
    option (google.api.http) = {
      get: "/v1/test/processMessageV5"
    };
  }

  rpc ProcessMessageV6 (rest_gateway_test.api.model.GetMessageRequest) returns (rest_gateway_test.api.model.GetMessageResponseV6) {
    option (google.api.http) = {
      get: "/v1/test/messages/{message_id}/map"
    };
  }
}


